--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,5 +32,9 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          sudo apt update && sudo apt upgrade -y
-          lscpu
+          touch test.txt
+          ls
+          cat test.txt
+          echo 'helloooo' > test.txt
+          ls
+          cat test.txt
